deployment/test/fe-upme-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-upme-deployment
spec:
  selector:
    matchLabels:
      app: fe-upme
  replicas: 1
  template:
    metadata:
      labels:
        app: fe-upme
    spec:
      containers:
      - name: fe-upme-test
        image: "asia.gcr.io/upme-test/upme-ui:latest"
        env:
        - name: "PORT"
          value: "80"
