deployment/test/fe-upme-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-upme-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: fe-ip
    networking.gke.io/managed-certificates: fe-upme-cert-dev
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: fe-upme-service
      port:
        number: 80
  rules:
    - host: test.upme.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: fe-upme-service
                port:
                  number: 80
