deployment/test/fe-upme-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-upme-service
spec:
  type: NodePort
  selector:
    app: fe-upme
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
